// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ghReleaseChangelog valid 1`] = `
Array [
  Array [
    Object {
      "owner": "imcuttle",
      "ref": "tags",
      "repo": "rcp",
    },
  ],
  Array [
    Object {
      "accept": undefined,
      "body": "## @rcp/abc

### Bug Fixes

*   title #123 should remove container firstly @imcuttle ([8dfcc84](https://github.com/imcuttle/rcp/commit/8dfcc84))

### Features

*   add c.preventfastop ([44bf84f](https://github.com/imcuttle/rcp/commit/44bf84f))

### Performance Improvements

*   set defaultLanguage to defaultProps ([cf01859](https://github.com/imcuttle/rcp/commit/cf01859))

### BREAKING CHANGES

*   use es6 instead of es5
*   remove global option

**Full Changelog**: https://github.com/imcuttle/rcp/commits/2.0.0",
      "discussion_category_name": undefined,
      "draft": false,
      "generate_release_notes": undefined,
      "owner": "imcuttle",
      "prerelease": undefined,
      "repo": "rcp",
      "tag_name": "2.0.0",
      "target_commitish": undefined,
    },
  ],
]
`;

exports[`ghReleaseChangelog valid-long v1.0.2 1`] = `
Array [
  Array [
    Object {
      "owner": "imcuttle",
      "ref": "tags",
      "repo": "gh-release-changelog",
    },
  ],
]
`;

exports[`ghReleaseChangelog valid-long v1.0.2-beta.3 1`] = `
Array [
  Array [
    Object {
      "owner": "imcuttle",
      "ref": "tags",
      "repo": "gh-release-changelog",
    },
  ],
  Array [
    Object {
      "accept": undefined,
      "body": "### Bug Fixes

*   some thing 1.0.2-beta.3 #1 @imcuttle ([a8bc65c](https://github.com/imcuttle/gh-release-changelog/commit/a8bc65c21d65e0b6a6c3f90bced3647363650112))

### BREAKING CHANGES

*   some changes...

**Full Changelog**: https://github.com/imcuttle/gh-release-changelog/commits/v1.0.2-beta.3",
      "discussion_category_name": undefined,
      "draft": false,
      "generate_release_notes": undefined,
      "owner": "imcuttle",
      "prerelease": undefined,
      "repo": "gh-release-changelog",
      "tag_name": "v1.0.2-beta.3",
      "target_commitish": undefined,
    },
  ],
]
`;

exports[`ghReleaseChangelogMonorepo lerna 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "#### a

Haha, :smile:

**Full Changelog**: https://github.com/o/a/commits/1.0.0

#### b

Haha, :smile:

**Full Changelog**: https://github.com/o/a/commits/1.0.0",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;

exports[`ghReleaseChangelogMonorepo pnpm 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "#### a

Haha, :smile:

**Full Changelog**: https://github.com/o/a/commits/1.0.0

#### b

Haha, :smile:

**Full Changelog**: https://github.com/o/a/commits/1.0.0",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;

exports[`ghReleaseChangelogMonorepo same-version-root-changelog 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "Haha, :smile:

**Full Changelog**: https://github.com/o/a/commits/1.0.0",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;

exports[`ghReleaseChangelogMonorepo workspaces 1`] = `
Array [
  Object {
    "accept": undefined,
    "body": "#### a

Haha, :smile:

**Full Changelog**: https://github.com/o/a/commits/1.0.0

#### b

Haha, :smile:

**Full Changelog**: https://github.com/o/a/commits/1.0.0",
    "discussion_category_name": undefined,
    "draft": undefined,
    "generate_release_notes": undefined,
    "owner": "o",
    "prerelease": undefined,
    "repo": "a",
    "tag_name": "1.0.0",
    "target_commitish": undefined,
  },
]
`;
